# amex-agent-project

./: .gitignore  CODEBASE_DETAILED_DOCUMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  amex-project-detailed-documentation.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  uca.db
alembic/: env.py
config/: env.example
diagrams/: README.md  architecture.mmd  hitl_resume_sequence.mmd  orchestration_graph.mmd  request_flow_sequence.mmd
src/uca_orchestrator/: __init__.py  settings.py
src/uca_orchestrator/api/: __init__.py  __main__.py  app.py  deps.py
src/uca_orchestrator/api/routers/: dev_auth.py  health.py  runs.py  use_cases.py
src/uca_orchestrator/api/routers/internal/: __init__.py  router.py
src/uca_orchestrator/api/routers/internal/systems/: __init__.py  approvals.py  artifacts.py  evaluations.py  firewall.py  hydra.py  netsec.py  policy.py  registration.py
src/uca_orchestrator/auth/: __init__.py  deps.py  jwt.py  models.py
src/uca_orchestrator/db/: __init__.py  base.py  init_db.py  models.py  session.py
src/uca_orchestrator/db/repositories/: __init__.py  artifacts.py  audit.py  runs.py  use_cases.py
src/uca_orchestrator/governance_clients/: __init__.py  internal_http.py
src/uca_orchestrator/observability/: __init__.py  logging.py  middleware.py
src/uca_orchestrator/orchestrator/: __init__.py  graph.py  interrupts.py  nodes.py  reducers.py  state.py
src/uca_orchestrator/services/: __init__.py  orchestration_service.py
tests/: test_smoke.py
